--- a/src/objects/_spacing-ive.scss
+++ b/src/objects/_spacing-ive.scss
@@ -21,6 +21,7 @@
   //
 
   $config: (
+    responsive: true,
     properties: margin,
     selector: "m",
     values: $SIZES,
@@ -34,6 +35,7 @@
   //
 
   $config: (
+    responsive: true,
     properties: margin,
     selector: "m",
     values: $SIZES,
